--- a/src/styles/Contract.css
+++ b/src/styles/Contract.css
@@ -69,3 +69,26 @@ a {
     text-decoration: none!important;
     color: #3f51b5;
 }
+.tableCenter{
+    margin: auto;
+}
+.tableCenter > tbody > tr>td{
+    text-align: center;
+}
+.btn{
+    margin-top: 20px;
+}
+.AddParts{
+    border: rgb(207, 207, 207) solid 1px;
+    padding-top: 20px;
+    padding-bottom: 15px;
+    padding-left: 10px;
+}
+.flexed{
+    display: flex;
+    justify-content: space-evenly;
+}
+.custom{
+    background-color: #ff5900!important;
+    color : white!important;
+}
