--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -47,3 +47,19 @@ body {
   }
   .card{margin: auto;}
   .alert{margin-top: 10px;}
+  .icon{
+    color: #ff5900!important;
+    border: 1px solid
+  }
+  .toggleInterface{
+    background-color: white;
+    border-radius: 5px;
+  }
+  .center{
+    text-align: center;
+    margin-top: 5vh;
+  }
+.reports{
+    display: block!important;
+    margin: auto;
+  }
