--- a/src/styles/Contract.css
+++ b/src/styles/Contract.css
@@ -1,4 +1,5 @@
 .container {
+    margin-top: 20px!important;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -94,4 +95,20 @@ a {
 }
 .card{
     width: 80%;
+}
+.contractList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; /* Adjust the gap as needed */
+}
+
+.contractItem { 
+    flex: 1 1 calc(33.333% - 20px); /* Adjust the width minus the gap */
+    border: 1px solid #ccc; /* Optional: for border */
+    padding: 10px; /* Optional: for spacing */
+    box-sizing: border-box; /* To include padding and border in the width */
+}
+
+.pagination{
+    margin-top: 15px;
 }
